main/default/objects/Work__c/Work__c.object-meta.xml
<CustomObject>
    <label>Work</label>
    <nameField>
        <displayFormat>W-{0000000000}</displayFormat>
        <label>Work Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>