main/default/objects/Work__c/fields/Completion_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Completion_Criteria__c</fullName>
    <label>Completion Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>