main/default/objects/Work__c/fields/Effort_Actual__c.field-meta.xml
<CustomField>
    <fullName>Effort_Actual__c</fullName>
    <label>Effort Actual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Effort</valueSetName>
    </valueSet>
</CustomField>