main/default/objects/Work__c/fields/Effort_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Effort_Estimate__c</fullName>
    <label>Effort Estimate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Effort</valueSetName>
    </valueSet>
</CustomField>