main/default/objects/Work__c/fields/Epic_Subject__c.field-meta.xml
<CustomField>
    <fullName>Epic_Subject__c</fullName>
    <formula>Epic__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Epic Subject</label>
    <type>Text</type>
</CustomField>