main/default/objects/Work__c/fields/QuipDocumentUrl__c.field-meta.xml
<CustomField>
    <fullName>QuipDocumentUrl__c</fullName>
    <label>QuipDocumentUrl</label>
    <type>Url</type>
</CustomField>