main/default/objects/Work__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Epic_Subject__c</columns>
    <columns>Subject__c</columns>
    <columns>Assignee__c</columns>
    <columns>Status__c</columns>
    <columns>Effort_Estimate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>