main/default/objects/Work__c/listViews/Kanban.listView-meta.xml
<ListView>
    <fullName>Kanban</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Assignee__c</columns>
    <columns>Effort_Estimate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Kanban</label>
</ListView>